updated-empty-entire-cart-feature-js

--- a/reports/junit-report.xml
+++ b/reports/junit-report.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-    <testsuite name="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" tests="5" failures="0" skipped="0">
+    <testsuite name="empty-entire-shopping-cart;empty-my-shopping-cart" tests="8" failures="0" skipped="0">
         <properties>
-            <property name="URI" value="D:\Testing 1\Programming for tester\Inlamning 3\System-Testing-using-BDD-Project\features\add-product-in-cart.feature">
+            <property name="URI" value="C:\Users\User\Desktop\System-Testing-using-BDD-Project\features\empty-entire-cart.feature">
             </property>
         </properties>
-        <testcase name="Given that I am on &quot;https://www.willys.se&quot;" classname="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" time="2.5877295">
+        <testcase name="Given that I am on &quot;https://www.willys.se&quot;" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="4.4838782">
         </testcase>
-        <testcase name="When that I accepted the standard cookie policy" classname="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" time="6.6755582">
+        <testcase name="When that I accepted the standard cookie policy" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="7.0401513">
         </testcase>
-        <testcase name="And that we have been through the initial where to deliver popup" classname="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" time="15.3941041">
+        <testcase name="And that we have been through the initial where to deliver popup" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="15.6264426">
         </testcase>
-        <testcase name="Then I click on + button to add the first product from veckans varor" classname="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" time="0.3890454">
+        <testcase name="Given that I am on the Fruit category page" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="6.4105107">
         </testcase>
-        <testcase name="And I click on + button to add more products from veckans varor" classname="add-and-increase-product-quantity-in-the-shopping-cart;add-1st-product-to-the-shopping-cart" time="15.2904673">
+        <testcase name="When I put a random number of each fruit that has price per piece in the cart" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="10.2445929">
+        </testcase>
+        <testcase name="When I click on the shopping cart" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="5.2789773">
+        </testcase>
+        <testcase name="And I click on töm varukorg button" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="5.1455292">
+        </testcase>
+        <testcase name="Then The cart should be empty" classname="empty-entire-shopping-cart;empty-my-shopping-cart" time="5.1728893">
         </testcase>
     </testsuite>
 </testsuites>
